force-app/main/default/objects/Campaign/fields/Kampagne_budskab__c.field-meta.xml
<CustomField>
    <fullName>Kampagne_budskab__c</fullName>
    <label>Kampagne budskab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>