force-app/main/default/objects/Campaign/fields/Latest_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Latest_Notification_Sent__c</fullName>
    <inlineHelpText>This field is automatically set, when a notification is sent to the Campaign Email (or Phone, if there is no email)</inlineHelpText>
    <label>Latest Notification Sent</label>
    <type>DateTime</type>
</CustomField>