force-app/main/default/objects/Campaign/fields/Latest_Zapier_Trigger_2__c.field-meta.xml
<CustomField>
    <fullName>Latest_Zapier_Trigger_2__c</fullName>
    <label>Latest Zapier Trigger #2</label>
    <type>DateTime</type>
</CustomField>