force-app/main/default/objects/Campaign/fields/Latest_Zapier_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Latest_Zapier_Trigger__c</fullName>
    <label>Latest Zapier Trigger</label>
    <type>DateTime</type>
</CustomField>