force-app/main/default/objects/Campaign/fields/Leads_Closed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Leads_Closed_Percentage__c</fullName>
    <formula>Count_of_Closed_Leads__c /  NumberOfLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count_of_Closed_Leads__c /  NumberOfLeads</inlineHelpText>
    <label>Leads Closed Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>