force-app/main/default/objects/Campaign/fields/Lecture__c.field-meta.xml
<CustomField>
    <fullName>Lecture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lecture</label>
    <type>Checkbox</type>
</CustomField>