force-app/main/default/objects/Campaign/fields/Lecturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lecturer_Name__c</fullName>
    <formula>Lecturer__r.FirstName &amp;&quot; &quot;&amp; Lecturer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lecturer Name</label>
    <type>Text</type>
</CustomField>