force-app/main/default/objects/Campaign/fields/Lecturer_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Lecturer_Picklist__c</fullName>
    <label>Lecturer (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tina Lundquist (tlu@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Kristian Holdt (kho@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Michael Jepsen (mj@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Andy Villadsen (avi@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Danny Taube Henriksen (dhe@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Sofus Stenstrup Jensen (ssj@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Rasmus Wedell (rwe@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Line Barfoed (lb@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Flemming Abildtrup (fab@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Fatih Tamer (fta@dinfamiliejurist.dk)</fullName>
            </value>
            <value>
                <fullName>Bo Rathsach (bra@dinfamiliejurist.dk)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>