force-app/main/default/objects/Campaign/fields/Location_Changed__c.field-meta.xml
<CustomField>
    <fullName>Location_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Changed</label>
    <type>Checkbox</type>
</CustomField>