force-app/main/default/objects/Campaign/fields/Marketing_Cost_Per_Booking__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cost_Per_Booking__c</fullName>
    <formula>IF(
    AND(Marketing_Spend__c != 0,  Total_amount_of_tickets_booked__c  != 0),
    Marketing_Spend__c / Total_amount_of_tickets_booked__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Marketing_Spend__c / Booked_Seats__c</inlineHelpText>
    <label>Marketing Cost Per Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>