force-app/main/default/objects/Campaign/fields/Marketing_Spend__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Spend__c</fullName>
    <label>Marketing Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>