force-app/main/default/objects/Campaign/fields/Max_tickets_per_order__c.field-meta.xml
<CustomField>
    <fullName>Max_tickets_per_order__c</fullName>
    <label>Max tickets per order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>