force-app/main/default/objects/Campaign/fields/Max_Tickets_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Max_Tickets_Per_Person__c</fullName>
    <label>Max Tickets Per Person</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>