force-app/main/default/objects/Campaign/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <length>80</length>
    <type>Text</type>
</CustomField>