force-app/main/default/objects/Campaign/fields/Min_tickets_per_order__c.field-meta.xml
<CustomField>
    <fullName>Min_tickets_per_order__c</fullName>
    <label>Min. tickets per order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>