force-app/main/default/objects/Campaign/fields/Minimum_Seats_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Seats_Invoiced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Seats Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>