force-app/main/default/objects/Campaign/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>TEXT(MONTH(StartDate)) &amp; &quot;-&quot; &amp; TEXT(YEAR(StartDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month/Year</label>
    <type>Text</type>
</CustomField>