force-app/main/default/objects/Campaign/fields/Name_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Contact__c</fullName>
    <label>Name of Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>