force-app/main/default/objects/Campaign/fields/No_Show_Hitrate__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Hitrate__c</fullName>
    <formula>IF(
    Count_of_Orders_with_No_Show__c = 0,
    0,
    Count_of_Orders_with_No_Show__c /  Count_of_No_Show__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Show Hitrate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>