force-app/main/default/objects/Campaign/fields/No_Show_Percentage__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Percentage__c</fullName>
    <formula>IF(
Count_of_No_Show__c = 0,
0,
Count_of_No_Show__c /   NumberOfLeads
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Show Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>