force-app/main/default/objects/Campaign/fields/Notification_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Notification_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field should only be used to trigger notification sending to this specific lecture. When set, triggers a flow that sends a notification to the email on the Campaign. If there&apos;s no email, tries phone number. If there&apos;s no phone number, flow fails. Flow sets field back to &quot;false&quot;, after running.</inlineHelpText>
    <label>Notification Trigger</label>
    <type>Checkbox</type>
</CustomField>