force-app/main/default/objects/Campaign/fields/Notify_Attendees_of_Location_Change__c.field-meta.xml
<CustomField>
    <fullName>Notify_Attendees_of_Location_Change__c</fullName>
    <label>Notify Attendees of Location Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>