force-app/main/default/objects/Campaign/fields/Open_for_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Open_for_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open for Bookings</label>
    <type>Checkbox</type>
</CustomField>