force-app/main/default/objects/Campaign/fields/Open_for_Bookings_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_for_Bookings_Date_Time__c</fullName>
    <label>Open for Bookings Date/Time</label>
    <type>DateTime</type>
</CustomField>