force-app/main/default/objects/Campaign/fields/Original_date_time__c.field-meta.xml
<CustomField>
    <fullName>Original_date_time__c</fullName>
    <inlineHelpText>This field is set when event is created and shows the original time of the event. In case the event is rescheduled, we can track here, when it was originally meant to be held.</inlineHelpText>
    <label>Original date/time</label>
    <type>DateTime</type>
</CustomField>