force-app/main/default/objects/Campaign/fields/Original_Host__c.field-meta.xml
<CustomField>
    <fullName>Original_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Host</label>
    <referenceTo>Hosts__c</referenceTo>
    <relationshipLabel>Campaigns (Original Host)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>