force-app/main/default/objects/Campaign/fields/Original_Host_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Host_ID__c</fullName>
    <label>Original Host-ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>