force-app/main/default/objects/Campaign/fields/Original_Venue__c.field-meta.xml
<CustomField>
    <fullName>Original_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Venue</label>
    <referenceTo>Hosts__c</referenceTo>
    <relationshipLabel>Campaigns (Original Venue)</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>