force-app/main/default/objects/Campaign/fields/Overall_Hitrate__c.field-meta.xml
<CustomField>
    <fullName>Overall_Hitrate__c</fullName>
    <formula>IF(
Count_of_Orders__c  = 0,
0,
Count_of_Orders__c /  Count_of_Attendees__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Hitrate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>