force-app/main/default/objects/Campaign/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Parent Account)</relationshipLabel>
    <relationshipName>Child_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>