force-app/main/default/objects/Campaign/fields/Price_Per_Cover_Excl_VAT2__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Cover_Excl_VAT2__c</fullName>
    <label>Price Per Cover Excl. VAT2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>