force-app/main/default/objects/Campaign/fields/Price_Per_Cover_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Cover_Excl_Vat__c</fullName>
    <formula>Price_Per_Cover__c * 0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per Cover Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>