force-app/main/default/objects/Campaign/fields/Projector_Screen__c.field-meta.xml
<CustomField>
    <fullName>Projector_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projector Screen</label>
    <type>Checkbox</type>
</CustomField>