force-app/main/default/objects/Campaign/fields/Realistic_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Realistic_Capacity__c</fullName>
    <formula>IF(
  Account__r.Realistic_Capacity__c &gt;= 1,
  Account__r.Realistic_Capacity__c,
  Host__r.Realistic_Capacity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realistic Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>