force-app/main/default/objects/Campaign/fields/Realistic_Capacity_Booked__c.field-meta.xml
<CustomField>
    <fullName>Realistic_Capacity_Booked__c</fullName>
    <label>Realistic Capacity Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>