force-app/main/default/objects/Campaign/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too few bookings</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Host cancelled event</fullName>
                <isActive>false</isActive>
                <label>Host cancelled event</label>
            </value>
            <value>
                <fullName>Host no longer in business</fullName>
                <isActive>false</isActive>
                <label>Host no longer in business</label>
            </value>
            <value>
                <fullName>Issue with Lecturer</fullName>
                <isActive>false</isActive>
                <label>Issue with Lecturer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>