force-app/main/default/objects/Campaign/fields/Reason_for_Location_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Location_Change__c</fullName>
    <label>Reason for Location Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too few bookings</fullName>
            </value>
            <value>
                <fullName>Issue with Lecturer</fullName>
            </value>
            <value>
                <fullName>Host cancelled event</fullName>
            </value>
            <value>
                <fullName>Host no longer in business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>