force-app/main/default/objects/Campaign/fields/Reason_for_Location_Change_Input__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Location_Change_Input__c</fullName>
    <label>Reason for Location Change Input</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Don&apos;t add a reason</fullName>
            </value>
            <value>
                <fullName>Write text</fullName>
            </value>
            <value>
                <fullName>Select from picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>