force-app/main/default/objects/Campaign/fields/Reason_for_Location_Change_Text__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Location_Change_Text__c</fullName>
    <label>Reason for Location Change (Text)</label>
    <type>TextArea</type>
</CustomField>