force-app/main/default/objects/Campaign/fields/Refunds_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Refunds_in_Campaign__c</fullName>
    <label>Refunds in Campaign</label>
    <summarizedField>CampaignMember.Refunded_amount__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>