force-app/main/default/objects/Campaign/fields/Registration_Form_Count__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The sum of Campaign Members with Event Mødestatus = &quot;Tilmeldingsblanket&quot; on Campaigns in Hierarchy (Excluding Cancelled Campaigns or Campaigns that are not Open for Bookings)</inlineHelpText>
    <label>Registration Form Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>