force-app/main/default/objects/Campaign/fields/Registration_Form_Index__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Index__c</fullName>
    <formula>IF(
  ISBLANK(Registration_Form_Target__c) || Registration_Form_Target__c = 0,
  null,
Registration_Form_Count__c /  Registration_Form_Target__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Form Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>