force-app/main/default/objects/Campaign/fields/Registration_Form_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Target_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The Average Value of Registration Forms (Tilmeldingsblanketter) on Campaign Members in Hierarchy (Excluding Cancelled Campaigns or Campaigns that are not Open for Bookings)</inlineHelpText>
    <label>Registration Form Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>