force-app/main/default/objects/Campaign/fields/Registration_Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registration Form Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>