force-app/main/default/objects/Campaign/fields/Registration_Form_Value_Index__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Value_Index__c</fullName>
    <formula>IF(
  ISBLANK(Registration_Form_Target_Value__c) || Registration_Form_Target_Value__c = 0,
  null,
 Calculated_Registration_Form_Value__c  /  Registration_Form_Target_Value__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Form Value Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>