force-app/main/default/objects/Campaign/fields/Related_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Related Event ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>