force-app/main/default/objects/Campaign/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if a reminder was sent after Invoice Approved</description>
    <inlineHelpText>This field checks if an invoice reminder was sent to Finance</inlineHelpText>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>