force-app/main/default/objects/Campaign/fields/Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescheduled</label>
    <type>Checkbox</type>
</CustomField>