force-app/main/default/objects/Campaign/fields/Rescheduled_From__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescheduled From</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Rescheduled To Campaigns</relationshipLabel>
    <relationshipName>Rescheduled_To_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>