force-app/main/default/objects/Campaign/fields/Rescheduled_From_ID__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_From_ID__c</fullName>
    <formula>CASESAFEID(Rescheduled_From__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rescheduled From ID</label>
    <type>Text</type>
</CustomField>