force-app/main/default/objects/Campaign/fields/Revenue_Difference_Exp_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Difference_Exp_Revenue__c</fullName>
    <formula>Actual_Revenue__c -  Expected_revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual_Revenue__c -  Expected_revenue__c</inlineHelpText>
    <label>Revenue Difference (Exp. Revenue)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>