force-app/main/default/objects/Campaign/fields/Revenue_Difference_Pct_Exp_Rev__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Difference_Pct_Exp_Rev__c</fullName>
    <formula>IF(
    AND(Expected_revenue__c != 0, Actual_Revenue__c != 0),
    (Actual_Revenue__c - Expected_revenue__c) / Expected_revenue__c * 100,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Actual_Revenue__c -  Expected_revenue__c ) / Expected_revenue__c * 100 (Will remain blank, until some revenue is generated)</inlineHelpText>
    <label>Revenue Difference Pct. (Exp. Rev)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>