force-app/main/default/objects/Campaign/fields/Revenue_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Incl_VAT__c</fullName>
    <inlineHelpText>Roll-up Summary field of &quot;Order Total&quot; on related Campaign Members</inlineHelpText>
    <label>Revenue Incl. VAT</label>
    <summarizedField>CampaignMember.Order_Total__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>