force-app/main/default/objects/Campaign/fields/Revenue_on_No_Show_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Revenue_on_No_Show_Excl_VAT__c</fullName>
    <formula>Revenue_on_No_Show_Incl_VAT__c * 0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue on No Show Excl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>